# ollama-bot-rs

./: .gitignore  Cargo.toml
src/: api.rs  commands.rs  handler.rs  main.rs  utils.rs
